--- a/06_Shop_Onepage/Views/Home/Index.cshtml
+++ b/06_Shop_Onepage/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
                     <h3>Những nhà quản lý và lập trình viên dày dạn kinh nghiệm</h3>
                     <p>Xuất phát từ nhu cầu sử dụng của chính doanh nghiệp mình, chúng tôi đã liên kết với nhau để tạo ra hệ thống quản lý web bán hàng chuyên nghiệp và an toàn. Anpero là tâm huyết của các kỹ sư hàng đầu trong lĩnh vực CNTT, các doanh nghiệp lớn trong ngành bán lẻ từ Mỹ và Việt Nam như Anker,TMT,Luxa ...</p>
                     <div class="about-text-button">
-                        <a href="/about" class="battn">Xem thêm</a>
+                        <a href="/home/about" class="battn">Xem thêm</a>
                     </div>
                 </div>
             </div>
@@ -36,13 +36,13 @@
 </section>
 
 <!-- Start-Photography-Area-->
-<section class="photography-area padding-top" id="philosophy">
+<section class="photography-area  section-relative" id="philosophy">
     <div class="container">
         <div class="row">
             <div class="text-center col-xs-12 col-sm-8 col-sm-offset-2">
                 <div class="page-title">
-                    <h2>Tổng quan dự án</h2>
-                    <p>Được bao bọc bởi hệ thống sông hồ và các công viên đã giúp Khu Ngoại Giao Đoàn tạo dựng được một không gian mở mà con người và tiên nhiêu luôn được giao hòa cùng nhau. Vị trí của Khu Ngoại Giao Đoàn và Ciputra còn được coi là huyệt phong thủy của Hà Nội, nằm trên trục Hồ Tây - Ba Vì. nơi đây luôn được mệnh danh là hồn cốt xứ Thăng Long rồng bay <a href="/tong-quan-du-an-chung-cu-ngoai-giao-a70" title="dự án ngoại giao đoàn">Xem thêm</a></p>
+                    <h2>Công nghệ sử dụng</h2>
+                    <p>Anpero sử dụng các công nghệ an toàn và tân tiến nhất được cập nhật liên tục để thiết kế hệ thống web quản lý bán hàng. Khách hàng có thể yên tâm về độ ổn định cũng như bảo mật khi sử dụng hệ thống quản trị web bán hàng của chúng tôi! <a href="/about" title="dự án ngoại giao đoàn">Xem thêm</a></p>
                 </div>
             </div>
         </div>
@@ -51,8 +51,15 @@
                 <div class="col-xs-12 col-sm-5">
                     <div class="carousel-inner" role="listbox">
                         <div class="item active">
-                            <a href="/tong-quan-du-an-chung-cu-ngoai-giao-a70" title="dự án ngoại giao đoàn">  <img src="~/assets/images/455x480.png" alt="cảnh quan ngoại giao đoàn"></a>
+                            <img src="/assets/images/455x480.png" alt="thiết kế web bán hàng">
                         </div>
+                        <div class="item">
+                            <img src="~/assets/images/slide2.jpg" alt="thiết kế web quản lý bán hàng">
+                        </div>
+                        <div class="item">
+                            <img src="~/assets/images/slide3.png" alt="web bán hàng giá rẻ">
+                        </div>
+
 
                     </div>
                 </div>
@@ -61,28 +68,28 @@
                         <li data-target="#photographyCarousel" data-slide-to="0" class="active">
                             <div class="single-photography">
                                 <div class="photography-icon">
-                                    <i class="fa fa-check"></i>
+                                    <i class="fa fa-cogs"></i>
                                 </div>
-                                <h2>Tính pháp lý</h2>
-                                <p>Dự án được Thủ tướng Chính Phủ phê duyệt tại Quyết định số 415/QĐ-TTg ngày 11/4/2001 và quy hoạch chi tiết xây dựng 1/500 Khu Ngoại Giao Đoàn đã được chủ tịch Ủy Ban Nhân Dân thành phố Hà Nội Phê duyệt tại quết định số 46/2006/QĐ-UB ngày 10/4/2006</p>
+                                <h2>Công nghệ lập trình</h2>
+                                <p>Nền tảng để xây dựng Anpero là .NET Core, Sql Server đây là các công nghệ mà hầu hết các ngân hàng trên thế giới sử dụng. Thêm vào đó với sự hỗ trợ của trí thông minh nhân tạo của Microsoft’s giúp Anpero cập nhật và duy trì sự ổn định ở mức cao nhất có thể</p>
                             </div>
                         </li>
-                        <li data-target="#photographyCarousel" data-slide-to="0">
+                        <li data-target="#photographyCarousel" data-slide-to="1">
                             <div class="single-photography">
                                 <div class="photography-icon">
-                                    <i class="fa fa-university"></i>
+                                    <i class="fa fa-database"></i>
                                 </div>
-                                <h2>Liên kết xung quanh</h2>
-                                <p>Cạnh khu đô thị mới Ciputra, khu đô thị Thành Phố Giao Lưu, KĐTM Cổ Nhuế và Khu đại sứ quán các nước, gần bệnh viện 19-8 Bộ Công An, Bệnh Viện E. <strong>Siêu thị mua sắm: </strong>Siêu thị Metro, Siêu thị BigC, Siêu thị Fivimark và các trung tâm mua sắm lớn xung quanh các khu đô thị.</p>
+                                <h2>Lưu trữ an toàn</h2>
+                                <p>Cloud Server xây dựng trên nền tảng công nghệ điện toán đám mây Azure đảm bảo hệ thống chịu được tải cực lớn. Sử dụng SQL Data Warehouse của Microsoft được các kỹ sư giỏi nhất thế giới đảm bảo về độ an toàn và ổn định </p>
                             </div>
                         </li>
-                        <li data-target="#photographyCarousel" data-slide-to="0">
+                        <li data-target="#photographyCarousel" data-slide-to="2">
                             <div class="single-photography">
                                 <div class="photography-icon">
-                                    <i class="fa fa-envira"></i>
+                                    <i class="fa fa-puzzle-piece "></i>
                                 </div>
-                                <h2>Giao hòa cùng thiên nhiên</h2>
-                                <p>Được bao bọc bởi hệ thống sông hồ và các công viên đã giúp Khu Ngoại Giao Đoàn tạo dựng được một không gian mở mà con người và tiên nhiêu luôn được giao hòa cùng nhau</p>
+                                <h2>Khả năng tự chủ</h2>
+                                <p>Sử dụng nền tảng quản lý web bán hàng Anpero bạn có thể tự tùy bến web nếu biết chút ít về lập trình. Ngoài ra bạn cũng có thể tự chủ về nơi đặt frontend website (hosting) nếu dịch vụ của chúng tôi không làm bạn hài lòng.</p>
                             </div>
                         </li>
                     </ol>
@@ -102,8 +109,8 @@
             <div class="row">
                 <div class="text-center col-xs-12 col-sm-8 col-sm-offset-2">
                     <div class="page-title">
-                        <h2>Thông tin mới nhất</h2>
-                        <p>Cập nhật các tiến độ, sơ đồ mặt bằng, nhà mẫu <a href="/blog" title="thông tin chung cư ngoại giao đoàn">Xem thêm tại đây</a></p>
+                        <h2>Các cập nhật</h2>
+                        <p>Xem thêm các cập nhật về hệ thống quản lý web bán hàng tại đây <a href="/blog" title="Thiết kế web bán hàng tốt nhất">Xem thêm tại đây</a></p>
                     </div>
                 </div>
             </div>
@@ -131,3 +138,10 @@
     </section>
 }
 @Html.Partial("_partial/_contact")
+@section scripts{
+<script type="text/javascript">
+        jQuery(document).ready(function () {
+   
+        });
+</script>
+}
