--- a/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
@@ -64,7 +64,7 @@
                     </div>
                     <div class="collapse navbar-collapse bs-example-js-navbar-scrollspy">
                         <ul class="nav navbar-nav">
-                            @if (commonInfo.MenuList != null & commonInfo.MenuList.Length>0)
+                            @if (commonInfo.MenuList != null && commonInfo.MenuList.Length>0)
                             {
                                 for (int i = 0; i < commonInfo.MenuList.Length; i++)
                                 {
@@ -92,11 +92,11 @@
                             {
                                 <li class="active"><a href="#home">home</a></li>
                                     <li><a href="#about">Về chúng tôi</a></li>
-                                    <li><a href="#portfolio">Portfolio</a></li>
+                                    <li><a href="#philosophy">Công nghệ</a></li>
                                     <li><a href="#facts">Facts</a></li>
-                                    <li><a href="#blog">Blog</a></li>
+                                    <li><a href="#blog">Các cập nhật</a></li>
                                     <li><a href="#price">Price </a></li>
-                                    <li><a href="#contact">contact</a></li>
+                                    <li><a href="#contact">Liên hệ</a></li>
                             }
 
 
