--- a/06_Shop_Onepage/Views/Shared/_partial/_contact.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_partial/_contact.cshtml
@@ -1,13 +1,12 @@
-﻿  <!-- Contact-Area-Start -->
-<section class="contact-area section-padding section-relative" id="contact">
+﻿ <section class="contact-area section-padding section-relative" id="contact">
     <div class="section-bg"></div>
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2">
                 <div class="page-title">
-                    <h2>Đăng ký tư vấn</h2>
-                    <p>Cảm ơn bạn đã tin tưởng vào đội ngũ tư vấn bất động sản Ngoại Giao Đoàn. </p>
-                    <p>Hotline : 123123456132 </p>
+                    <h2>Đăng ký và liên hệ</h2>
+                    <p>Cảm ơn bạn đã tin tưởng và sử dụng dịch vụ của chúng tôi. </p>
+                    <p>Hotline : 0906006580 </p>
                 </div>
             </div>
         </div>
@@ -26,4 +25,3 @@
         </div>
     </div>
 </section>
-<!-- Contact-Area-End -->
