--- a/06_Shop_Onepage/assets/css/style.css
+++ b/06_Shop_Onepage/assets/css/style.css
@@ -649,6 +649,7 @@ textarea.form-control:focus {
     float: left;
     overflow: hidden;
     position: relative;
+    padding:5px;
 }
 
 .portfolio-zoom-icon {
