--- a/06_Shop_Onepage/Views/Shared/_Layout.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
     {
         <header class="top-area section-relative" id="home">
             @Html.Partial("_partial/_MainMenu")
-            @Html.Partial("_partial/_HomeSlide_1");
+            @Html.Partial("_partial/_HomeSlide_1")
         </header>
     }
     else
