--- a/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
@@ -83,24 +83,26 @@
                             {*@
                                 @if (ViewBag.pageName != null && !Request.Browser.IsMobileDevice && ViewBag.pageName == "home")
                                 {
-                                    <li class="active"><a href="#home">home</a></li>
+                                    <li class="adm"><a href="#contact">Đăng nhập quản trị</a></li>
                                     <li><a href="#about">Về chúng tôi</a></li>
                                     <li><a href="#philosophy">Công nghệ</a></li>                                    
-                                    <li><a href="#blog">Các cập nhật</a></li>
+                                    <li><a href="#blog">Hướng dẫn</a></li>
                                     <li><a href="#images">Hình Ảnh</a></li>
-                                    <li><a href="#price">Báo giá </a></li>
+                                    <li><a href="#price">Đăng ký </a></li>
                                     <li><a href="#contact">Liên hệ</a></li>
+
 
                                 }
                                 else
                                 {
-                                    <li class="active"><a href="/">home</a></li>
+                                    <li class="adm"><a href="#contact">Đăng nhập quản trị</a></li>
                                     <li><a href="/#about">Về chúng tôi</a></li>
                                     <li><a href="/#philosophy">Công nghệ</a></li>
-                                    <li><a href="/blog">Các cập nhật</a></li>
+                                    <li><a href="/blog">Hướng dẫn</a></li>
                                     <li><a href="/#images">Hình Ảnh</a></li>
-                                    <li><a href="#price">Báo giá</a></li>
+                                    <li><a href="#price">Đăng ký</a></li>
                                     <li><a href="/#contact">Liên hệ</a></li>
+                                    
                                 }
                             @*}*@
                         </ul>
