--- a/06_Shop_Onepage/Views/Home/Index.cshtml
+++ b/06_Shop_Onepage/Views/Home/Index.cshtml
@@ -109,7 +109,7 @@
             <div class="row">
                 <div class="text-center col-xs-12 col-sm-8 col-sm-offset-2">
                     <div class="page-title">
-                        <h2>Các cập nhật</h2>
+                        <h2>Cập nhật và hướng dẫn</h2>
                         <p>Xem thêm các cập nhật về hệ thống quản lý web bán hàng tại đây <a href="/blog" title="Thiết kế web bán hàng tốt nhất">Xem thêm tại đây</a></p>
                     </div>
                 </div>
