--- a/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
+++ b/06_Shop_Onepage/Views/Shared/_partial/_MainMenu.cshtml
@@ -12,6 +12,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-7">
                     <div class="contact-number">
+                        <a href="http://admin.anpero.com" title="quản trị web bán hàng">Trang quản trị |</a>
                         @if (!string.IsNullOrEmpty(commonInfo.HotLine))
                         {
                             <a href="tel:@commonInfo.HotLine"><span><i class="fa fa-phone"></i></span>@commonInfo.HotLine</a>
