--- a/09_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/09_Shop_MultiProduct/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -189,7 +189,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 col-xs-12 coppyright">© 2016 Vinfish. All Rights Reserved. Power by 0986249625</div>
+                    <div class="col-sm-12 col-xs-12 coppyright">© 2016 Vinfish. All Rights Reserved. Power by Cao Phong 0986249625</div>
 
                 </div>
                 <!--row-->
