--- a/09_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/09_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
     if (ViewData["commonInfo"] != null)
     {
         commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
-        ViewBag.Title = "Ngon Lành | Thực phẩm sạch Ngon lành An toàn và Uy tín";
-        ViewBag.Keywords = Anpero.StringHelpper.UnicodeToKoDau("thực phẩm sạch, hoa qua sạch, rau sạch, ngon lành, ngon sạch, trái cây sạch, bơ sáp, bơ booth, bưởi diễn, bưởi danh xanh, bưởi quế dương,mật ong");
+        ViewBag.Title = commonInfo.Name;
+        ViewBag.Keywords = Anpero.StringHelpper.UnicodeToKoDau(commonInfo.Desc);
         ViewBag.WebsiteUrl = HttpContext.Current.Request.Url.AbsoluteUri;
     }
 
@@ -55,99 +55,8 @@
         </div> 
     }  
     
-    <section class="wow bounceInUp animated" >
-        <div class="best-pro slider-items-products container" style="margin-top: 50px;">
-            <div class="new_title">
-                <h2>Sản phẩm khuyến mại</h2>
-            </div>
-            @*<div class="cate-banner-img">
-                @if (ViewData["AdsSlide2"] != null)
-                {
-                    Ads[] slide = (Ads[])ViewData["AdsSlide2"];
-                    if (slide.Length > 0)
-                    {
-                        <img src="@slide[0].ImagesUrl" alt="@slide[0].Description" />
-                    }
-                }
-            </div>*@
-            <div id="best-seller" class="product-flexslider hidden-buttons">
-                <div class="slider-items slider-width-col4 products-grid">
-                    @if (ViewData["BestsaleProduct"] != null)
-                    {
-                        AnperoFrontend.WebService.SearchResult saleList = (AnperoFrontend.WebService.SearchResult)ViewData["BestsaleProduct"];
-                        if (saleList != null && saleList.Item.Length > 0)
-                        {
-                            foreach (ProductItem item in saleList.Item)
-                            {
-                                <div class="item">
-                                    <div class="item-inner">
-                                        <div class="item-img">
-                                            <div class="item-img-info">
-                                                <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName" class="product-image">
-                                                    <img src="@item.Images" alt="@item.PrName">
-                                                </a>
-                                                <div class="sale-label sale-top-left">Sale</div>
-                                                @*<div class="new-label new-top-left">New</div>*@
-                                                <div class="item-box-hover">
-                                                    <div class="box-inner">
-                                                        <div class="product-detail-bnt">
-                                                            <a class="button detail-bnt" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">
-                                                                <span>Chi tiết</span>
-                                                            </a>
-                                                        </div>                                                       
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="item-info">
-                                            <div class="info-inner">
-                                                <div class="item-title">
-                                                    <a href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)" title="@item.PrName">
-                                                        @item.PrName
-                                                    </a> 
-                                                </div>
-                                                <div class="item-content">
-                                                    <div class="rating">
-                                                        <div class="ratings">
-                                                            <div class="rating-box">
-                                                                <div class="rating" style="width:80%"></div>
-                                                            </div>
-                                                            <p class="rating-links"><a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
-                                                        </div>
-                                                    </div>
-                                                    <div class="item-price">
-                                                        <div class="price-box">
-                                                            <span class="regular-price">
-                                                                @*<span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>*@ 
-                                                                @*@if (item.IsSale)*@
-                                                                @{
-                                                                    <span class="old-price price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
-                                                                    <span class="special-price price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.SalePrice) đ</span>
-                                                                }
-                                                                @*else
-                                                                {
-                                                                    <span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span>
-                                                                }*@
-                                                            </span> 
-                                                        </div>
-                                                    </div>
-                                                    <div class="add_cart">                                                        
-                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            }
-                        }
-                    }
-                </div>
-            </div>
-        </div>
-    </section>
     <section class="wow bounceInUp animated">
-        <div class="best-pro slider-items-products container">
+        <div class="best-pro slider-items-products container" style="margin-top: 50px;">
             <div class="new_title">
                 <h2>Sản phẩm bán chạy</h2>
             </div>
@@ -161,7 +70,7 @@
                         {
                             foreach (ProductItem item in bestSaleList.Item)
                             {
-                                <li class="item col-lg-2 col-md-2 col-sm-2 col-xs-6">
+                                <li class="item col-lg-4 col-md-4 col-sm-4 col-xs-6">
                                     <div class="item-inner">
                                         <div class="item-img">
                                             <div class="item-img-info">
